--- a/style.css
+++ b/style.css
@@ -1,1 +1,26 @@
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #0F52BA;
+    overflow: hidden;
+}
+/* Style the links inside the navigation bar */
 
+.topnav a {
+    float: left;
+    color: #FFFFFF;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px
+}
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #000000;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #5a86c3;
+  color: white;
+}
