--- a/style.css
+++ b/style.css
@@ -88,7 +88,8 @@
   color: white;
 }
 .profile-header {
-    color:red;
-    margin-left: 40px;
+  color: white;
+  padding-left: 40px;
+  border: 1px solid red; /* temporary */
 }
 }
